@@ -2,6 +2,7 @@ Process Hacker
 
 2.26
  * NEW/IMPROVED:
+   * Added -selectpid command line option
    * Updated ExtendedTools plugin:
      * Improved support for multiple GPUs
  * FIXED:
